--- a/src/searchstyle.css
+++ b/src/searchstyle.css
@@ -96,7 +96,7 @@ p.invalid {
     width: 200px;
     display: block;
     margin: 0 auto;
-    font-size: 25px;
+    font-size: 15px;
     margin-bottom: 50px;
   }
   .audio {
